Update README and meta description with semantic search

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Airbnb Reviews Sentiment Analysis with AI-Powered Semantic Search - Analyze and visualize sentiment from reviews using VADER and OpenAI embeddings" />
-    <title>Airbnb Sentiment Analysis | AI-Powered Search & VADER Analysis</title>
+    <meta name="description" content="Analyze, visualize, and AI semantic search from Airbnb reviews" />
+    <title>Airbnb Sentiment Analysis | Analyze and visualize sentiment from Airbnb reviews</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
