--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Analyze, visualize, and AI semantic search from Airbnb reviews" />
-    <title>Airbnb Sentiment Analysis | Analyze and visualize sentiment from Airbnb reviews</title>
+    <title>Airbnb Sentiment Analysis | Analyze, visualize, and AI semantic search from Airbnb reviews</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
